[project]
name = "worldbank-package"
version = "1.0.0"
description = "Ce package permet de recuperer les donnees de la banque mondiale en format dataframe."

License = "MIT"
readme = "README"
requires-python = ">=3.7"

authors = [{ name = "arielchrist", email = "achristngato@groupeisi.com"}]
dependcies = ["pandas","resquest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"